metriken vorberechnen beispiel stopwörter

--- a/templates/Helloworld.html
+++ b/templates/Helloworld.html
@@ -7,5 +7,19 @@
     {% for paper in paperlist %}
     <ul>{{ paper }} hinzugefügt. Titel= {{ paper.title }}</ul>
     {% endfor %}
+    <hr>
+    {% for paper in paperlist %}
+    <li>
+         <ul>{{ paper.abstract.title }}</ul>
+        <ul>{{ paper.abstract.text }}</ul>
+     <ul>{{ paper.abstract.stemmedText.text}}</ul>
+    <ul>Text:</ul>
+        {% for text in paper.text %}
+            <ul>{{ text.text}}</ul>
+             <ul>StemmedText:</ul>
+            <ul>{{ text.stemmedText.text}}</ul>
+        {% endfor %}
+    </li>
+    {% endfor %}
 
 {% endblock %}
