--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,14 @@
-h1 {
+h1, h3 {
     color: rgba(29, 168, 124, 0.49);
+}
+
+p{
+    font-size: 1.2vw !important;
+}
+
+.graphic {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
