--- a/templates/startseite.html
+++ b/templates/startseite.html
@@ -5,7 +5,21 @@
 <div class="row">
 
                 <div class="col-lg-12">
-                    <h1 class="page-header">Home</h1>
+                    <h1 class="page-header">RGA - Regensburg Corpus Analyzer</h1>
                 </div>
+                <p class="col-lg-12">Der RGA ist ein Tool, das Wissenschaftlern im Bereich des Text Mining unterstützen soll. <br>
+                    Anhand eines Testkorpus können alle implementierten Metriken ausprobiert werden. Zusätzlich bietet der RGA die Möglichkeit,
+                    eigene Dokumente hochzuladen und somit externe Korpora zu erstellen.
+                    Im Folgenden wird das Projekt und die vorhandenen Metriken vorgestellt.</p>
+                <div class="col-lg-12">
+                    <h3>Die verschiedenen Korpusversionen</h3>
+                    <p><a href="https://www.omicsonline.org">Omics International</a> stellt aus zahlreichen wissenschaftlichen Domänen
+                    Journals kostenlos zur Verfügung. Aus diesen wurden 18 Kategorien gewählt und deren Journals aus dem Jahr 2018 gecrawlt.
+                    Diese dienen dem RCA als Testkorpus und stehen in den folgenden Varianten zur Verfügung.</p>
+                    {% load static %}
+                    <img src="{% static 'img/grafiken_textmining_Korpusübersicht.png' %}" class="graphic"/>
+                </div>
+
+
 </div>
 {% endblock %}
