--- a/templates/upload.html
+++ b/templates/upload.html
@@ -6,9 +6,30 @@
    <div class="container">
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
-            <label for="upload"> Wählen Sie ihre Jsonfiles aus:</label>
-            <input type="file" accept=".json" id="upload" name="JsonPaper" multiple required>
-            <button type="submit">Upload Paper</button>
+             <div class="col-lg-12">
+                    <h1 class="page-header">Upload </h1><!-- Überschrift -->
+                </div>
+
+     <!-- Upload Buttons-->
+            <div class="row fileupload-buttonbar">
+                <div class="col-lg-8">
+                  <!-- The fileinput-button span is used to style the file input field as button -->
+                  <span class="btn btn-success fileinput-button">
+                    <i class="glyphicon glyphicon-plus"></i>
+                    <span></span>
+                  <input type="file" name="files[]" multiple>
+                  </span>
+
+                  <button type="reset" class="btn btn-theme02 cancel">
+                    <i class="glyphicon glyphicon-trash"></i>
+                    <span>Delete files</span>
+                    </button>
+                    <button type="submit" class="btn btn-theme start">
+                    <i class="glyphicon glyphicon-upload"></i>
+                    <span>Start upload</span>
+                    </button>
+                </div>
+            </div>
         </form>
     </div>
 
