2.Update Look Vergleich.html

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -20,11 +20,11 @@
                   <input type="file" name="files[]" multiple>
                   </span>
 
-                  <button type="reset" class="btn btn-theme02 cancel">
+                  <button type="reset" class="btn btn-primary">
                     <i class="glyphicon glyphicon-trash"></i>
                     <span>Delete files</span>
                     </button>
-                    <button type="submit" class="btn btn-theme start">
+                    <button type="submit" class="btn btn-primary">
                     <i class="glyphicon glyphicon-upload"></i>
                     <span>Start upload</span>
                     </button>
