--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,5 @@
 h1, h3 {
-    color: rgba(29, 168, 124, 0.49);
+    color: rgba(29, 168, 124, 1);
 }
 
 p{
@@ -10,5 +10,78 @@ p{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
 
+li {
+    padding-bottom: 3px;
+}
+
+button {
+    margin: 2%;
+}
+
+.list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.overwiev {
+    padding-right: 10%;
+}
+
+/* Popup container - can be anything you want */
+.popup {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+   /-webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* The actual popup */
+.popup .popuptext {
+    visibility: hidden;
+    width: 350px;
+    background-color: #555;
+    color: rgba(29, 168, 124, 1);
+    text-align: start;
+    border-radius: 6px;
+    padding: 8px;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -80px;
+}
+
+.popup:hover{
+    color: rgba(29, 168, 124, 1);
+}
+
+.popup:hover .popuptext{
+    visibility: visible;
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+}
+
+#uploadfield {
+    width: 100%;
+    height: 500px;
+    border-color: rgba(29, 168, 124, 1) !important;
+    background-color: rgba(29, 168, 124, 1) !important;
+    border-width: thick;
+}
