--- a/templates/upload.html
+++ b/templates/upload.html
@@ -12,14 +12,14 @@
 
      <!-- Upload Buttons-->
             <div class="row fileupload-buttonbar">
-                <div class="col-lg-8">
+                <div class="col-lg-12">
                   <!-- The fileinput-button span is used to style the file input field as button -->
-                  <span class="btn btn-success fileinput-button">
+                  <span class="btn btn-success fileinput-button" id="uploadfield">
                     <i class="glyphicon glyphicon-plus"></i>
                     <span></span>
                   <input type="file" name="files[]" multiple>
                   </span>
-
+                    <br>
                   <button type="reset" class="btn btn-primary">
                     <i class="glyphicon glyphicon-trash"></i>
                     <span>Delete files</span>
