--- a/templates/upload.html
+++ b/templates/upload.html
@@ -33,4 +33,15 @@
     </div>
 
 
+    <!--   <div class="container">
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            <label for="upload"> Wählen Sie ihre Jsonfiles aus:</label>
+            <input type="file" id="upload" name="JsonPaper" multiple required>
+            <button type="submit">Upload Paper</button>
+        </form>
+    </div>
+-->
+
+
 {% endblock %}
