--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,10 @@
                     </li>
                     <li>
                         <a href="{% url 'vergleich' %}"><i class="fa fa-book fa-fw"></i>Vergleich</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'results' %}"><i class="fa fa-binoculars fa-fw"></i>Ergebnis</a>
+                    </li>
 
                 </ul>
             </div>
