--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,9 +1,31 @@
-h1, h3 {
+h1, h3, h4 {
     color: rgba(29, 168, 124, 1);
 }
 
 p{
     font-size: 1.2vw !important;
+}
+
+table{
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+tr:nth-child(even){background-color: #f2f2f2;}
+
+tr:hover {background-color: #ddd;}
+
+th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #4CAF50;
+    color: white;
 }
 
 .graphic {
@@ -12,6 +34,11 @@ p{
     margin-right: auto;
     margin-top: 3%;
     margin-bottom: 3%;
+    width: 80%;
+}
+
+.listitems {
+    width: 30%;
 }
 
 li {
@@ -30,6 +57,7 @@ button {
 
 .overwiev {
     padding-right: 10%;
+    width: 70%;
 }
 
 /* Popup container - can be anything you want */
@@ -85,3 +113,4 @@ button {
     background-color: rgba(29, 168, 124, 0.5) !important;
     border-width: thick;
 }
+
