--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'home' %}">Text Mining
+            <a class="navbar-brand" href="{% url 'home' %}">RCA
             </a>
         </div>
         <!-- /.navbar-header -->
