--- a/templates/vergleich.html
+++ b/templates/vergleich.html
@@ -3,80 +3,57 @@
 
 {% block body %}
     <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="page-header">Vergleiche </h1>
+        <div class="col-lg-12">
+            <h1 class="page-header">Vergleiche </h1>
+            <h3>Create your Corpus!</h3>
+            <p>Stellen Sie sich an dieser Stelle die Korpora zusammen, die Sie gerne analysieren möchten. </p> <br>
+        </div>
+        <div class="col-lg-6">
+            <form role="form">
+                <div class="form-group">
+                    <label>Kategorie</label>
+                    <select class="form-control">
+                        <option>-</option>
+                        {% for kategorie in categories %}
+                            <option>{{ kategorie }}</option>
+                        {% endfor %}
+
+                    </select>
                 </div>
-                <!-- /.col-lg-12 -->
-            </div>
-            <!-- /.row -->
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            Omics Journals
-                        </div>
-                        <div class="panel-body">
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <form role="form">
-                                        <div class="form-group">
-                                            <label>Kategorie</label>
-                                            <select class="form-control">
-                                                <option>-</option>
-                                                {% for kategorie in categories %}
-                                                    console.log(kategorie)
-                                                    <option>{{ kategorie }}</option>
-                                                {% endfor %}
+             <div class="form-group">
+                 <label>Journals</label>
+                 <br>
+                 <form>
+                     <input type="Checkbox"> Testvalue<br>
+                 </form>
+             </div>
+            </form>
+        </div>
 
-                                            </select>
-                                        </div>
-                                        <div class="form-group">
-                                            <label>Journals</label>
-                                            <select multiple class="form-control">
-                                                <option>Ergebnisse</option>
-
-                                            </select>
-                                        </div>
-                                    </form>
-                                </div>
-                                <!-- /.col-lg-6 (nested) -->
-                                <div class="col-lg-6">
-                                    <form role="form">
-
-
-                                        <div class="form-group">
-                                            <label>Kategorie</label>
-                                            <select class="form-control">
-                                                <option>-</option>
-                                                <option>Biology</option>
-                                                <option>IT</option>
-
-                                            </select>
-                                        </div>
-                                        <div class="form-group">
-                                            <label>Journals</label>
-                                            <select multiple class="form-control">
-                                                <option>Ergebnisse</option>
-
-                                            </select>
-                                        </div>
-                                        <div>
-                                            <a href="{% url 'results' %}" class="btn btn-default">
-                                                Analysiere
-                                            </a>
-                                        </div>
-
-
-                                    </form>
-                                </div>
-                                <!-- /.col-lg-6 (nested) -->
-                            </div>
-                            <!-- /.row (nested) -->
-                        </div>
-                        <!-- /.panel-body -->
-                    </div>
-                    <!-- /.panel -->
-                </div>
-                <!-- /.col-lg-12 -->
-            </div>
+     <div class="col-lg-6">
+         <form role="form">
+             <div class="form-group">
+                 <label>Kategorie</label>
+                 <select class="form-control">
+                     <option>-</option>
+                     {% for kategorie in categories %}
+                         <option>{{ kategorie }}</option>
+                     {% endfor %}
+                 </select>
+             </div>
+             <div class="form-group">
+                 <label>Journals</label>
+                 <br>
+                 <form>
+                     <input type="Checkbox"> Testvalue<br>
+                 </form>
+             </div>
+             <div>
+                 <a href="{% url 'results' %}" class="btn btn-default">
+                     Analysiere
+                 </a>
+             </div>
+         </form>
+     </div>
+    </div>
 {% endblock %}
