--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,31 +3,34 @@
 
 {% block body %}
 
-   <div class="container">
+    <div class="container">
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
-             <div class="col-lg-12">
-                    <h1 class="page-header">Upload </h1><!-- Überschrift -->
-                </div>
+            <div class="col-lg-12">
+                <h1 class="page-header">Upload</h1><!-- Überschrift -->
+            </div>
 
-     <!-- Upload Buttons-->
+            <!-- Upload Buttons-->
             <div class="row fileupload-buttonbar">
                 <div class="col-lg-12">
-                  <!-- The fileinput-button span is used to style the file input field as button -->
-                  <span class="btn btn-success fileinput-button" id="uploadfield">
+                    <!-- The fileinput-button span is used to style the file input field as button -->
+                    <span class="btn btn-success fileinput-button" id="upload">
                     <i class="glyphicon glyphicon-plus"></i>
                     <span></span>
-                  <input type="file" name="files[]" multiple>
+                  <input type="file" id="upload" name="JsonPaper" multiple required>
                   </span>
                     <br>
-                  <button type="reset" class="btn btn-primary">
-                    <i class="glyphicon glyphicon-trash"></i>
-                    <span>Delete files</span>
+
+                    <button type="reset" class="btn btn-primary">
+                        <i class="glyphicon glyphicon-trash"></i>
+                        <span>Delete files</span>
                     </button>
+
                     <button type="submit" class="btn btn-primary">
-                    <i class="glyphicon glyphicon-upload"></i>
-                    <span>Start upload</span>
+                        <i class="glyphicon glyphicon-upload"></i>
+                        <span>Start upload</span>
                     </button>
+                </div>
             </div>
         </form>
     </div>
