--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,6 +13,7 @@ a {
 label {
     color: rgba(29, 168, 124, 1);
     font-size: large;
+    font-weight: 500;
 }
 
 .navbar-brand{
@@ -140,5 +141,21 @@ button {
     text-align: center;
     border-radius: 9px;
 
+}
+
+.freitextsuche{
+    width: 100%;
+    height: 34px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    color: #555;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+}
+
+.btn{
+    font-weight:bold;
+    font-size: 22px;
+    background-color: rgba(29, 168, 124, 1);
+    color: white !important;
 }
 
