Button zum Download der Ergebnisse + Einfügen eines Footers

--- a/templates/ergebnis.html
+++ b/templates/ergebnis.html
@@ -209,5 +209,32 @@
         <h3>Scientific Metrics</h3>
     </div>
     </div>
+    <div class="col-lg-6">
+
+    </div>
+
+
+    <div class="col-lg-6" >
+    <div>
+         <button type="reset" class="btn btn-primary btn-lg">
+             <i class="glyphicon glyphicon-download"></i>
+             <span>Download Ergebnisse</span>
+         </button>
+        </div>
+        <div class="panel-body">
+
+        </div>
+     </div>
+    </div>
+
+    <div class="footer" >
+    <footer >
+      <div class="text-center">
+        <p>
+         <strong>Anna Maria Auer, Marlene Bauer, Christoph Tögel & Julian Dietz</strong>
+        </p>
+      </div>
+    </footer>
+    </div>
 
 {% endblock %}
