Button zum Download der Ergebnisse mit Funktion hinterlegt

--- a/templates/ergebnis.html
+++ b/templates/ergebnis.html
@@ -199,6 +199,7 @@
             <li>abstract</li>
             <li>paper</li>
             <li>world</li>
+
             <li>common</li>
         </ul>
     </div>
@@ -214,18 +215,15 @@
     </div>
 
 
-    <div class="col-lg-6" >
-    <div>
-         <button type="reset" class="btn btn-primary btn-lg">
-             <i class="glyphicon glyphicon-download"></i>
-             <span>Download Ergebnisse</span>
-         </button>
-        </div>
-        <div class="panel-body">
 
-        </div>
-     </div>
+    <div>
+         <button>
+             <a href="download" download><span class="btn btn-primary btn-lg"><i class="glyphicon glyphicon-download"></i> Download files</span></a>
+         </button>
     </div>
+        <div class="panel-body">
+     </div>
+
 
     <div class="footer" >
     <footer >
