--- a/templates/ergebnis.html
+++ b/templates/ergebnis.html
@@ -218,12 +218,16 @@
 
     <div>
 
-            <form action="{% url 'download' %}" method="get" target="_blank">
+            <!--<form action="{% url 'download' %}" method="get" target="_blank">
                 <span class="btn btn-primary btn-lg">
                     <i class="glyphicon glyphicon-download"></i>
                   <input type="submit" value="Download results">
                 </span>
-            </form>
+            </form>-->
+
+        <button>
+              <a href="{% url 'download' %}" download><span class="btn btn-primary btn-lg"><i class="glyphicon glyphicon-download"></i> Download files</span></a>
+        </button>
     </div>
         <div class="panel-body">
      </div>
